--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,3 +41,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+oauth.google.client.id=877150512220.apps.googleusercontent.com
+oauth.google.client.secret=kwu4iZBGaU5NT1PC0BAlhdQa
