Currently including google API

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,5 +41,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-oauth.google.client.id=877150512220.apps.googleusercontent.com
-oauth.google.client.secret=kwu4iZBGaU5NT1PC0BAlhdQa
+oauth.google.client.id="877150512220-6qtjp4j146hmp2av2mckm6q2c76laf4o.apps.googleusercontent.com"
+oauth.google.client.secret="V6SyRB3GL-iMleVHK3l-9gFU"
