wip home page; refactor back-end, working now on the front-end

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,3 +43,9 @@ logger.application=DEBUG
 
 oauth.google.client.id="877150512220-6qtjp4j146hmp2av2mckm6q2c76laf4o.apps.googleusercontent.com"
 oauth.google.client.secret="V6SyRB3GL-iMleVHK3l-9gFU"
+
+mongo.host="127.0.0.1"
+mongo.port=27017
+mongo.db=playstory
+#mongo.username=""
+#mongo.password=""
