wip to find proper way to make things...

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,13 +33,13 @@ application.secret="cpx`s5u;4Nnuxwni]wof6ew/Xl3IUIENMFEV9?@bwF=XlQwVAnbc[P8dmOib
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=ERROR
+#logger.root=ERROR
 
 # Logger used by the framework:
-logger.play=INFO
+#logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+#logger.application=DEBUG
 
 oauth.google.client.id="877150512220-6qtjp4j146hmp2av2mckm6q2c76laf4o.apps.googleusercontent.com"
 oauth.google.client.secret="V6SyRB3GL-iMleVHK3l-9gFU"
