Integrate play2 mongo async plugin

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,4 +50,7 @@ mongo.db=playstory
 #mongo.username=""
 #mongo.password=""
 
+mongodb.servers = ["127.0.0.1"]
+mongodb.db=playstory
+
 application.offline=false
