Trying to find why update doesnt redeemed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,10 +33,10 @@ application.secret="cpx`s5u;4Nnuxwni]wof6ew/Xl3IUIENMFEV9?@bwF=XlQwVAnbc[P8dmOib
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-#logger.root=ERROR
+logger.root=DEBUG
 
 # Logger used by the framework:
-#logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 #logger.application=DEBUG
