It was a bug in ReactiveMongo, Now the response is redeemed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,7 +33,7 @@ application.secret="cpx`s5u;4Nnuxwni]wof6ew/Xl3IUIENMFEV9?@bwF=XlQwVAnbc[P8dmOib
 # You can also configure logback (http://logback.qos.ch/), by providing a logger.xml file in the conf directory .
 
 # Root logger:
-logger.root=DEBUG
+logger.root=ERROR
 
 # Logger used by the framework:
 logger.play=DEBUG
